--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "nodemon": "^3.1.1"
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.1",
+    "otp-generator": "^4.0.1"
   }
 }
