--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.1",
     "otp-generator": "^4.0.1",
+    "streamifier": "^0.1.1",
     "zod": "^3.23.8"
   }
 }
